fix(auth): assign user role as GrantedAuthority in JWT filter
The filter was authenticating requests with Collections.emptyList() for
authorities, so @PreAuthorize("hasRole('ADMIN')") on EventoController
always returned 403 — admin endpoints were effectively unreachable.

Extract the 'rol' claim from the JWT, wrap it as ROLE_<rol>
SimpleGrantedAuthority, and attach it to the authentication token.

Also wrap token parsing in try/catch so a malformed token results in an
anonymous request instead of a 500.